deploy/k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exbanka-3
  labels:
    app.kubernetes.io/part-of: exbanka
